fix loading screen spinner stuck, fix keyboard input bug where low rating was giving postive values, created new audio files for more words

--- a/frontend/src/components/App.css
+++ b/frontend/src/components/App.css
@@ -45,7 +45,7 @@
 }
 
 .icon {
-  width: 110px;
+  width: 95px;
   margin: 20px;
 }
 
@@ -81,12 +81,12 @@
 .circle {
   background-color: rgb(45, 222, 45);
   border-radius: 50%;
-  width: 100px;
-  height: 100px;
+  width: 90px;
+  height: 90px;
   z-index: -4;
   position: relative;
-  top: -105px;
-  left: 5px;
+  top: -95px;
+  left: 3px;
 }
 .country-flag{
   height: 30px;
